# fetch_insee

./: .env.example  .gitignore  README.md  README_backup.md  REFACTORING_SUMMARY.md  analysis.ipynb  analyze_companies.py  explore_endpoints.py  final_report.py  fix_missing_effectifs.py  insee_api.py  insee_api_v2.py  insee_api_v3.py  main.py  main_search.py  process_full_3000.py  process_optimized.py  process_optimized_duplicates.py  pyproject.toml  run_full_process.py  salesforce_processor.py  test_50.py  test_safe.py  test_salesforce.py  test_sample.py  test_urls.py
config/: config.yaml
docs/: GUIDE_GENERATION_RAPPORTS.md  RAPPORT_OPTIMISATIONS_20250916_2200.md  RAPPORT_OPTIMISATIONS_PERFORMANCE.md  RAPPORT_TRAITEMENT_INSEE_20250916_2200.md  RAPPORT_TRAITEMENT_INSEE_SEPTEMBRE_2025.md  REFACTOR_CLASSIFICATION_INSEE.md  rapport_insee_demo_20250915_011603_limit10.md  rapport_insee_demo_20250915_011654_limit50.md  rapport_insee_demo_20250915_012229_limit50.md  rapport_insee_demo_20250915_012651_limit10.md  rapport_insee_demo_20250915_100425_limit5.md  rapport_insee_demo_20250915_100519_limit20.md  rapport_insee_full_20250915_040457.md
output/: README.md
scripts/: fix_effectifs_description.py  fix_size_thresholds.py  generate_report.py  process_companies.py
src/: __init__.py  data_processor.py  insee_client.py  salesforce_export.py
