[project]
name = "insee-data-processor"
version = "1.0.0"
description = "Module pour enrichir des données d'entreprises avec l'API INSEE Sirene"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Data INSEE Team"}
]
keywords = ["insee", "sirene", "entreprises", "api", "salesforce"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Office/Business",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.scripts]
process-companies = "scripts.process_companies:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "scripts/",
    "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
